fix: student grade wrong model
