# src/main/java/school/hei/haapi/endpoint/rest/mapper/GradeMapper.java
@@ -6,7 +6,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 import school.hei.haapi.endpoint.rest.model.CrupdateGrade;
 import school.hei.haapi.endpoint.rest.model.Grade;
-import school.hei.haapi.endpoint.rest.model.StudentGrades;
+import school.hei.haapi.endpoint.rest.model.StudentGrade;
 import school.hei.haapi.endpoint.rest.validator.GradeValidator;
 import school.hei.haapi.model.Exam;
 import school.hei.haapi.model.User;
@@ -41,25 +41,25 @@ public class GradeMapper {
         .updateDate(grade.getCreationDatetime());
   }
 
-  public StudentGrades toRestStudentGrade(school.hei.haapi.model.Grade grade) {
+  public StudentGrade toRestStudentGrade(school.hei.haapi.model.Grade grade) {
     if (grade == null) {
       return null;
     }
-    var getStudentGrade = new StudentGrades().grade(List.of(toRest(grade)));
+    var getStudentGrade = new StudentGrade().grade(toRest(grade));
     getStudentGrade.setStudent(userMapper.toRestStudent(grade.getStudent()));
 
     return getStudentGrade;
   }
 
-  public StudentGrades toRestStudentExamGrade(User student, Exam exam) {
+  public StudentGrade toRestStudentExamGrade(User student, Exam exam) {
     Optional<school.hei.haapi.model.Grade> optionalGrade =
         exam.getGrades().stream()
             .filter(grade -> grade.getStudent().getId().equals(student.getId()))
             .findFirst();
     school.hei.haapi.model.Grade grade = optionalGrade.get();
-    var getStudentGrades = new StudentGrades().grade(List.of(toRest(grade)));
-    getStudentGrades.setStudent(userMapper.toRestStudent(student));
-    return getStudentGrades;
+    var getStudentGrade = new StudentGrade().grade(toRest(grade));
+    getStudentGrade.setStudent(userMapper.toRestStudent(student));
+    return getStudentGrade;
   }
 
   //  public ExamDetail toRestExamDetail(Exam exam, List<school.hei.haapi.model.Grade> grades) {
